src/styles/_project.scss
.project-group {
  margin-bottom: 100px;

  h1 {
    margin-bottom: 28px;

    .description {
      display: inline-block;
      margin-left: 20px;
    }

    @media screen and (max-width: $container-sm) {
      .description {
        display: block;
        margin-top: 5px;
        margin-left: 0;
      }
    }
  }
}

.project-container {
  &.active {
    .actions {
      height: 101%;
      border-bottom-color: $brand-primary;
      z-index: 2;
    }
  }
}

.project {
  border-bottom: none;
  height: 132px;
  text-decoration: none;
  display: block;
  position: relative;
  padding-bottom: 28px;

  &:hover {
    .details {
      text-decoration: none;
      color: $brand-primary;

      p {
        color: $gray-dark;
      }
    }

    .actions {
      border-bottom-color: $brand-primary;
    }
  }

  .details {
    display: block;
    overflow: hidden;
    height: 100%;
    background: #fff;
    border: none;
    color: $gray-dark;

    p {
      color: $gray-light;
    }
  }

  .actions {
    border-bottom: 1px solid #4A4A4A;
    box-shadow: 0 1px 0 0 #ccc inset;
    height: 0;
    top: 0;
    left: 0;
    overflow: hidden;
    z-index: 1;
    width: 100%;
    background: #fff;
    position: absolute;
    text-align: center;
    transition: height 250ms ease;

    nav {
      margin: 49px 0;
    }

    a {
      border: 1px solid lighten($brand-primary, 30%);
      padding: 4px 8px;
      font-size: 18px;
      border-radius: 3px;
      display: inline-block;

      &:hover {
        color: #fff;
        border-color: transparent;
        background: $brand-primary;
      }
    }
  }

  .title {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    width: 100%;
    margin-bottom: 4px;
  }

  @media screen and (max-width: $container-sm) {
    .actions {
      text-align: left;

      .title {
        margin-top: 10px;
        border-top: 1px solid transparent;
        font-size: 20px;
      }
    }
  }
}

